Expand discussion on AI and transhumanism
Added a section discussing transhumanism and Will Smith's perspective on AI.

--- a/_posts/2025-12-30-AI-Slop.md
+++ b/_posts/2025-12-30-AI-Slop.md
@@ -7,3 +7,8 @@ the leeding scientist in humanoid robot development where he created Ai robot as
 senario where an artificial intelegence may reach such a consiousness. This film explores the concepts of person hood wheather or not robots should
 be sentient
 
+# Ai is the worst thing yet according to Will Smith and I don't blame him
+
+I was recently exposed to this concept called tranhumanism and the main issue that i find in ai and all the individual was is there attempt to make them human like or do human things.
+
+it reminded me of the Quote from Will smith that says that goes somthing along the lines of 'can a robot write a symphany or paint a materpeace' and i agree with this alot.
