Fix typos and enhance clarity in AI commentary
Corrected spelling and grammatical errors in the commentary on AI and the film 'I, Robot'. Improved clarity and coherence of the text.

--- a/_posts/2025-12-30-AI-Slop.md
+++ b/_posts/2025-12-30-AI-Slop.md
@@ -1,6 +1,6 @@
 # An ethical Commentery on AI using the film "I robot"
 <h1>
-  Summary
+ IRobot movie Summary
 </h1>
     The movie follows a cop named officer Spooner in a futuristic society set in year 2035 where he investigates on who killed Dr. Alfred Lanning. Dr Lannig in the film was 
 the leeding scientist in humanoid robot development where he created Ai robot assistancences. This movie questions what it means to be human and to feel emotion, it also presents us with a
@@ -9,6 +9,8 @@ be sentient
 
 # Ai is the worst thing yet according to Will Smith and I don't blame him
 
-I was recently exposed to this concept called tranhumanism and the main issue that i find in ai and all the individual was is there attempt to make them human like or do human things.
+I was recently exposed to this concept called tranhumanism and the main issue that i find in AI and all the individual involved is there attempt to make AI human like or do human things.
 
-it reminded me of the Quote from Will smith that says that goes somthing along the lines of 'can a robot write a symphany or paint a materpeace' and i agree with this alot.
+It reminded me of the Quote from Will smith that says that goes somthing along the lines of "can a robot write a symphany or paint a materpeace" and i agree with this alot, more specifically i agree with his strong conviction against heavy relience on robots. In officer Snooper conviction comes from a viehicular accident that tramatized him. In his attempt to evade a collision with an pickup truck he swerved into the ocean, another car was caught in the accident that had a little girl in it. Rescue robots were sent to help with and they save him and not the little girl.
+
+In the movie officer snooper made the point that the that right ddecision to make was to save the girl but the robot made a logical and statisticaly safe decision to save him instead. This is one of the main concerns I share with Officer Snipper people are becoming too relient on AI in ways that are dangerous. In that situation statistical probability does not determine the who is worth saving in life or death situations. In real life we can see corprate frensy to find 
