Update AI commentary and ethical concerns
Revised commentary on AI ethics using the film 'I, Robot', addressing concerns about reliance on AI and its implications for human decision-making and skills.

--- a/_posts/2025-12-30-AI-Slop.md
+++ b/_posts/2025-12-30-AI-Slop.md
@@ -1,3 +1,4 @@
+<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 # An ethical Commentery on AI using the film "I robot"
 <h1>
  IRobot movie Summary
@@ -13,4 +14,10 @@ I was recently exposed to this concept called tranhumanism and the main issue th
 
 It reminded me of the Quote from Will smith that says that goes somthing along the lines of "can a robot write a symphany or paint a materpeace" and i agree with this alot, more specifically i agree with his strong conviction against heavy relience on robots. In officer Snooper conviction comes from a viehicular accident that tramatized him. In his attempt to evade a collision with an pickup truck he swerved into the ocean, another car was caught in the accident that had a little girl in it. Rescue robots were sent to help with and they save him and not the little girl.
 
-In the movie officer snooper made the point that the that right ddecision to make was to save the girl but the robot made a logical and statisticaly safe decision to save him instead. This is one of the main concerns I share with Officer Snipper people are becoming too relient on AI in ways that are dangerous. In that situation statistical probability does not determine the who is worth saving in life or death situations. In real life we can see corprate frensy to find 
+In the movie officer snooper made the point the that right decision to make was to save the girl but the robot made a logical and statisticaly safe decision to save him instead. This is one of the main concerns I share with Officer Snipper people are becoming too relient on AI in ways that are dangerous. In that situation statistical probability does not determine the who is worth saving in life or death situations. In real life we can see corprate frensy to find a new way of implimenting AI into corperate jobs but this rush to implient AI has no return more often than not and more importatnly taking peopels jobs. Using AI is not an inheratly bad thing but the market we are currenlty in has put alot of stock in AI and to compete with demand for AI peole are unwisly putting moving their resources into it. The relience on AI goes beyond just the Use of tools to accomplish goals more efficiently but it's shown to begin to cripple the thinking skills amoung youth. With the Advent of gauth AI and Chatgpt accademic integrity and thinking skills is declinning, no longer do students of any kind use their own inteligence to complete assigments or projects but they have made AI a cruch to pass classes. This kind of blind relience is the type of thing ofiicer Snooper and I are very weary of. In the movie the new modles of robots were designed to complete human like tasks like baking and cervalence, as shown in the scene where Detactive Snooper tries the pie at his grand mothers house to only find out that it was made by one of the new robot models. Even in the scene in the end where the AI that servalence for the robot building facility that Dr Lanning died in, the AI made a judgment on the wheather humans actinng uatonymously was optimal according to the tree main rules that the robots must follow (A robot may not injure a human being or, through inaction, allow a human being to come to harm. A robot must obey the orders given it by human beings except where such orders would conflict with the First Law,A robot must protect its own existence as long as such protection does not conflict with the First or Second Law). AI should never get to that place.
+
+# Solution: End Transhumnism and Use AI as a tool to help better life but not consume it
+
+
+
+
