Refine AI commentary and improve text clarity
Revised the commentary on AI and the film 'I, Robot' for clarity and coherence. Enhanced grammar, punctuation, and structure throughout the text.

--- a/_posts/2025-12-30-AI-Slop.md
+++ b/_posts/2025-12-30-AI-Slop.md
@@ -3,21 +3,30 @@
 <h1>
  IRobot movie Summary
 </h1>
-    The movie follows a cop named officer Spooner in a futuristic society set in year 2035 where he investigates on who killed Dr. Alfred Lanning. Dr Lannig in the film was 
-the leeding scientist in humanoid robot development where he created Ai robot assistancences. This movie questions what it means to be human and to feel emotion, it also presents us with a
-senario where an artificial intelegence may reach such a consiousness. This film explores the concepts of person hood wheather or not robots should
-be sentient
+   The movie follows a cop named Officer Spooner in a futuristic society set in the year 2035, where he investigates the death of Dr. Alfred Lanning. Dr. Lanning is portrayed as the leading scientist in humanoid robot development, responsible for creating AI robot assistants. The film raises questions about what it means to be human and to feel emotion, and it presents a scenario in which artificial intelligence may reach a form of consciousness. It also explores the concept of personhood and whether robots should be considered sentient.
+
+ <img src="" alt="">
 
 # Ai is the worst thing yet according to Will Smith and I don't blame him
 
 I was recently exposed to this concept called tranhumanism and the main issue that i find in AI and all the individual involved is there attempt to make AI human like or do human things.
 
-It reminded me of the Quote from Will smith that says that goes somthing along the lines of "can a robot write a symphany or paint a materpeace" and i agree with this alot, more specifically i agree with his strong conviction against heavy relience on robots. In officer Snooper conviction comes from a viehicular accident that tramatized him. In his attempt to evade a collision with an pickup truck he swerved into the ocean, another car was caught in the accident that had a little girl in it. Rescue robots were sent to help with and they save him and not the little girl.
+It reminded me of a quote from Will Smith that goes something like, “Can a robot write a symphony or paint a masterpiece?” I agree with this sentiment a lot—specifically his strong conviction against heavy reliance on robots. Officer Spooner’s conviction comes from a vehicular accident that traumatized him. While trying to avoid a collision with a pickup truck, he swerved into the water, and another car with a little girl inside was pulled into the accident as well. Rescue robots were sent to help, but they chose to save him instead of the girl.
 
-In the movie officer snooper made the point the that right decision to make was to save the girl but the robot made a logical and statisticaly safe decision to save him instead. This is one of the main concerns I share with Officer Snipper people are becoming too relient on AI in ways that are dangerous. In that situation statistical probability does not determine the who is worth saving in life or death situations. In real life we can see corprate frensy to find a new way of implimenting AI into corperate jobs but this rush to implient AI has no return more often than not and more importatnly taking peopels jobs. Using AI is not an inheratly bad thing but the market we are currenlty in has put alot of stock in AI and to compete with demand for AI peole are unwisly putting moving their resources into it. The relience on AI goes beyond just the Use of tools to accomplish goals more efficiently but it's shown to begin to cripple the thinking skills amoung youth. With the Advent of gauth AI and Chatgpt accademic integrity and thinking skills is declinning, no longer do students of any kind use their own inteligence to complete assigments or projects but they have made AI a cruch to pass classes. This kind of blind relience is the type of thing ofiicer Snooper and I are very weary of. In the movie the new modles of robots were designed to complete human like tasks like baking and cervalence, as shown in the scene where Detactive Snooper tries the pie at his grand mothers house to only find out that it was made by one of the new robot models. Even in the scene in the end where the AI that servalence for the robot building facility that Dr Lanning died in, the AI made a judgment on the wheather humans actinng uatonymously was optimal according to the tree main rules that the robots must follow (A robot may not injure a human being or, through inaction, allow a human being to come to harm. A robot must obey the orders given it by human beings except where such orders would conflict with the First Law,A robot must protect its own existence as long as such protection does not conflict with the First or Second Law). AI should never get to that place.
+In the movie, Officer Spooner argues that the right decision would have been to save the girl, but the robot chose the logical and statistically safer option of saving him instead. This reflects one of the main concerns I share with Officer Spooner: people are becoming too reliant on AI in ways that can be dangerous. In situations like that, statistical probability cannot determine who is “worth” saving in a life‑or‑death moment.
+
+In real life, we see a corporate frenzy to implement AI into workplaces, but this rush often yields little return and, more importantly, results in people losing their jobs. Using AI is not inherently bad, but the current market has placed so much value on it that companies are unwisely shifting their resources just to keep up with demand.
+
+This reliance on AI goes beyond using tools to work more efficiently—it has begun to weaken critical thinking skills among young people. With the rise of tools like ChatGPT and other AI assistants, academic integrity and independent thinking are declining. Students increasingly rely on AI as a crutch to complete assignments instead of using their own reasoning. This kind of blind dependence is exactly what Officer Spooner and I are wary of.
+
+In the film, the new models of robots are designed to perform human‑like tasks such as baking and surveillance. This is shown in the scene where Detective Spooner tries a pie at his grandmother’s house, only to discover it was made by one of the new robots. Even at the end of the movie, the AI overseeing the robot manufacturing facility where Dr. Lanning died makes a judgment about whether humans acting autonomously is “optimal” according to the Three Laws of Robotics (A robot may not injure a human being or, through inaction, allow a human being to come to harm. A robot must obey human orders unless they conflict with the First Law. A robot must protect its own existence as long as doing so does not conflict with the First or Second Law). AI should never reach a point where it interprets these rules in ways that override human autonomy.
 
 # Solution: End Transhumnism and Use AI as a tool to help better life but not consume it
 
+Transhumanism is a philosophical and intellectual movement—sometimes veering into pseudoscience or propaganda—that advocates enhancing the human condition by developing and distributing technologies that can greatly extend longevity, cognition, and well‑being.
 
+This way of thinking has been creeping into our media for years. It often appears subtle and harmless at first, but its logical conclusions can be unsettling. In the movie, the narrative pushes viewers to question the boundaries of consciousness and what it truly means to be alive. One of the main characters, Sonny the robot, represents what I see as a major driver of this ideology. Early in the film, Sonny is found hiding in a disposal bin, trying not to be caught, and later runs away. The characters eventually acknowledge that his actions were motivated by fear. In the interrogation scene—where Sonny is repeatedly asked whether he killed Dr. Lanning—Detective Spooner’s persistent questioning triggers an emotional outburst from Sonny as he denies the accusation.
 
+Imagery like this is designed to promote the idea that we could one day create sentient robots with human‑like intelligence. But this is a direction we should not pursue. This is also where I can no longer agree with Officer Spooner, because by the end of the movie he seems to warm up to Sonny. I would not. That level of intelligence should remain exclusive to humans.
 
+Many wealthy tech investors and industry leaders are deeply interested in integrating technology into the human body. Figures like Elon Musk have openly discussed projects such as neural‑link technology. Again, this type of innovation risks leading us toward transhumanism‑driven eugenics, security vulnerabilities, and serious moral ambiguity. AI should remain a tool—not something that replaces our jobs or becomes embedded in every aspect of our lives.
