Update AI commentary post with image and title change
Added an image to the AI commentary post and updated the title.

--- a/_posts/2025-12-30-AI-Slop.md
+++ b/_posts/2025-12-30-AI-Slop.md
@@ -1,11 +1,12 @@
-<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
 # An ethical Commentery on AI using the film "I robot"
 <h1>
  IRobot movie Summary
 </h1>
+<img src="/images/OIP.webp" alt="img of will smith">
    The movie follows a cop named Officer Spooner in a futuristic society set in the year 2035, where he investigates the death of Dr. Alfred Lanning. Dr. Lanning is portrayed as the leading scientist in humanoid robot development, responsible for creating AI robot assistants. The film raises questions about what it means to be human and to feel emotion, and it presents a scenario in which artificial intelligence may reach a form of consciousness. It also explores the concept of personhood and whether robots should be considered sentient.
 
- <img src="" alt="">
+ 
 
 # Ai is the worst thing yet according to Will Smith and I don't blame him
 
