Expand discussion on transhumanism and AI ethics
Added a section discussing transhumanism and its implications in AI, along with a relevant image.

--- a/_posts/2025-12-30-AI-Slop.md
+++ b/_posts/2025-12-30-AI-Slop.md
@@ -23,6 +23,7 @@ This reliance on AI goes beyond using tools to work more efficiently—it has be
 In the film, the new models of robots are designed to perform human‑like tasks such as baking and surveillance. This is shown in the scene where Detective Spooner tries a pie at his grandmother’s house, only to discover it was made by one of the new robots. Even at the end of the movie, the AI overseeing the robot manufacturing facility where Dr. Lanning died makes a judgment about whether humans acting autonomously is “optimal” according to the Three Laws of Robotics (A robot may not injure a human being or, through inaction, allow a human being to come to harm. A robot must obey human orders unless they conflict with the First Law. A robot must protect its own existence as long as doing so does not conflict with the First or Second Law). AI should never reach a point where it interprets these rules in ways that override human autonomy.
 
 # Solution: End Transhumnism and Use AI as a tool to help better life but not consume it
+<img src="/images/uglyRobot.webp" alt="ugly Robot">
 
 Transhumanism is a philosophical and intellectual movement—sometimes veering into pseudoscience or propaganda—that advocates enhancing the human condition by developing and distributing technologies that can greatly extend longevity, cognition, and well‑being.
 
